------------------------------------------------------------------------
r478 | gaser | 2013-04-22 13:25:47

M       cg_vbm_batch.m
M       cg_vbm_run.m
M       CHANGES.txt
M       cg_vbm_batch.sh

Updated batch system.
------------------------------------------------------------------------
r479 | gaser | 2013-04-22 17:09:04

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_write.m
A       findfiles.m
A       vbm_io_cprintf.m
M       vbm_io_writenii.m
M       vbm_io_xml.m
A       vbm_vol_t1qacalc.m

(1) Added group expectation maps - a difference map between tissue probability 
    map and the final label map. 
(2) Minor changes and corrections for variable names.
(3) Added quality assurance routines.
(4) Update error messages for vbm_io_xml.
(5) Add vbm_io_cfprintf for colored command line output.
(6) Update final figure output.

------------------------------------------------------------------------
r480 | dahnke | 2013-04-22 18:17:05

M       CHANGES.txt
M       cg_vbm_write.m
M       tbx_cfg_vbm.m
M       vbm_vol_t1qacalc.m

(1) Minor changes and corrections for variable names.
(2) Updates for VBM12i skull stripping to get more brain tissue.
------------------------------------------------------------------------
r481 | dahnke | 2013-04-23 09:58:22

M       CHANGES.txt
M       cg_vbm_batch.sh

cg_vbm_batch.sh now allows to define folder for log-files and uses hostname
for log-file.
------------------------------------------------------------------------
r482 | gaser | 2013-04-23 11:24:12

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_vol_partvol.m
M       vbm_vol_resize.m

(1) Minor changes and corrections for variable names.
(2) Updates for VBM12i skull stripping to get more brain tissue.
(3) Correct BVC error in the non-adaptive pipeline.
(4) Correct resizing error in vbm_vol_partvol for highres images. 
------------------------------------------------------------------------
r483 | dahnke | 2013-04-23 15:23:31