@@ -2002,3 +2002,12 @@ M       vbm_vol_resize.m
 (4) Correct resizing error in vbm_vol_partvol for highres images. 
 ------------------------------------------------------------------------
 r483 | dahnke | 2013-04-23 15:23:31
+
+M       Makefile.vbm
+M       cg_vbm_batch.m
+M       compile.m
+M       CHANGES.txt
+
+Corrected filenames in cg_vbm_batch.m.
+------------------------------------------------------------------------
+r484 | gaser | 2013-04-29 16:10:44
